[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core<4,>=3.2",
]

[project]
name = "lmdbm"
readme = "readme.md"
authors = [ { name = "Dobatymo", email = "Dobatymo@users.noreply.github.com" } ]
requires-python = ">=3.7"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
]
dynamic = [
  "description",
  "version",
]
dependencies = [
  "lmdb",
  "typing-extensions>=4",
]
optional-dependencies.bench = [
  "genutility[iter,rich,time]>=0.0.103",
  "pysos==1.2.9",
  "pytablewriter==0.63",
  "rocksdict==0.3.5",
  "semidbm==0.5.1",
  "sqlitedict==1.7",
  "unqlite==0.9.2",
  "vedis==0.7.1",
]
optional-dependencies.test = [
  "genutility[test]",
]
urls.Home = "https://github.com/Dobatymo/lmdb-python-dbm"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.bandit]
skips = [ "B101" ]
