[bdist_wheel]
universal = 1

[metadata]
name = lmdbm
version = 0.0.5
description = Python DBM style wrapper around LMDB (Lightning Memory-Mapped Database)
author = Dobatymo
long_description = file: readme.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Dobatymo/lmdb-python-dbm
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: ISC License (ISCL)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Database

[options]
zip_safe = True
use_2to3 = False
python_requires = >=3.6
packages =
	lmdbm
install_requires =
	lmdb

[options.package_data]
lmdbm =
	py.typed

[options.extras_require]
dev =
	isort
	genutility
